--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Open+Sans+Condensed:wght@300&family=Pacifico&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,669;0,700;0,800;0,900;1,400;1,500;1,600;1,669;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arsenal:wght@400;700&display=swap');
+
+@import url('./reset.css');
+
+@import url('./icomoon.css');
+@import url('../common.blocks/header.css');
+@import url('../common.blocks/navigation.css');
+
+:root {
+  --header-background: #fbebea;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  height: 200vh;
+}
+
 /* font-family: 'Caveat', cursive;
 font-family: 'Open Sans Condensed', sans-serif;
 font-family: 'Pacifico', cursive;
+font-family: 'Arsenal', sans-serif;
 font-family: 'Playfair Display', serif; */
