--- a/common.blocks/navigation.css
+++ b/common.blocks/navigation.css
@@ -5,7 +5,6 @@
 }
 
 .navigation__item {
-  margin-bottom: 1em;
   margin-left: 1em;
 }
 
@@ -22,8 +21,12 @@
   color: #f50049;
 }
 
-@media screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
+  .navigation {
+    background-color: white;
+  }
+
   .navigation__item {
-    margin-bottom: 0;
+    margin-bottom: 1em;
   }
 }
