--- a/styles/index.css
+++ b/styles/index.css
@@ -26,3 +26,16 @@ font-family: 'Open Sans Condensed', sans-serif;
 font-family: 'Pacifico', cursive;
 font-family: 'Arsenal', sans-serif;
 font-family: 'Playfair Display', serif; */
+
+
+ /* Mobile
+only screen and (min-width: 480px)
+
+ Tablet
+only screen and (min-width: 768px) 
+
+ Desktop
+only screen and (min-width: 992px)
+
+ Huge
+only screen and (min-width: 1280px)  */
