--- a/common.blocks/header.css
+++ b/common.blocks/header.css
@@ -1,13 +1,13 @@
 .header {
-  position: fixed;
-  z-index: 1;
+  position: sticky;
+  top: 0;
 
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   width: 100%;
-  padding: 20px 20px;
+  padding: 20px 30px;
 
   text-align: center;
 
