--- a/common.blocks/header.css
+++ b/common.blocks/header.css
@@ -11,7 +11,7 @@
 
   text-align: center;
 
-  background-color: var(--header-background);
+  background-color: var(--primary-background);
 }
 
 .header__navigation-toggle-label {
