--- a/common.blocks/common.css
+++ b/common.blocks/common.css
@@ -49,10 +49,13 @@
 
 .section {
   width: 100%;
+
+  scroll-margin-top: 60px;
 }
 
 .section_centered {
   max-width: 1220px;
+  margin: 0 auto;
 }
 
 .section-title {
