--- a/common.blocks/order.css
+++ b/common.blocks/order.css
@@ -21,7 +21,10 @@
 }
 
 .order__header {
-  font-size: 40px;
+  margin-bottom: 40px;
+
+  font-size: 50px;
+  font-weight: bold;
 }
 
 .order__instruction {
@@ -29,7 +32,11 @@
 }
 
 .order__instruction-step {
+  min-width: 30px;
+  margin-right: 20px;
+
   font-size: 64px;
+  font-weight: bold;
 }
 
 .order__instruction-content {
@@ -40,10 +47,16 @@
   display: block;
 
   margin-top: 20px;
+  margin-bottom: 10px;
 
   font-size: 21px;
+  font-weight: bold;
 }
 
 .order__instruction-info {
+  display: inline-block;
+
+  margin-bottom: 20px;
+
   font-size: 20px;
 }
