--- a/common.blocks/header.css
+++ b/common.blocks/header.css
@@ -66,6 +66,10 @@
     transform-origin: top;
   }
 
+  .header__navigation-item {
+    margin-bottom: 1em;
+  }
+
   .header__navigation-toggle-label {
     display: flex;
     align-items: center;
