--- a/styles/index.css
+++ b/styles/index.css
@@ -21,6 +21,7 @@
   --primary-background: #fbebea;
   --primary-color: #f50049;
   --footer-background: #e8e8e8;
+  --max-content-width: 1280px;
 }
 
 *,
