--- a/common.blocks/assortment.css
+++ b/common.blocks/assortment.css
@@ -29,7 +29,7 @@
   align-items: flex-start;
   flex-direction: column;
 
-  min-height: 300px;
+  min-height: 250px;
   padding: 20px;
 
   background-color: white;
@@ -65,6 +65,9 @@
 }
 
 .assortment__grid-kids {
+  background-color: #f4f2f3;
+  background-position: right;
+
   grid-column-end: 4;
   grid-column-start: 2;
   grid-row-start: 3;
