--- a/common.blocks/contacts.css
+++ b/common.blocks/contacts.css
@@ -63,7 +63,8 @@
   flex-direction: column;
 }
 
-.contacts__form-input {
+.contacts__form-input,
+.contacts__form-textarea {
   margin-bottom: 20px;
   padding: 20px 0 3px 0;
 
@@ -76,14 +77,26 @@
   font-size: 14px;
 }
 
-.contacts__form-input::placeholder {
+.contacts__form-input::placeholder,
+.contacts__form-textarea::placeholder {
   color: rgb(143, 143, 143);
+}
+
+.contacts__form-textarea {
+  height: 40px;
+  margin-bottom: 40px;
+
+  resize: none;
 }
 
 .contacts__form-submit {
   align-self: flex-start;
 
-  margin-top: 20px;
+  padding: 0.5em 2em;
+
+  text-transform: capitalize;
+
+  font-size: 19px;
 }
 
 .contacts__link {
@@ -94,4 +107,63 @@
 
 .contacts__phone {
   display: block;
+}
+
+@media only screen and (max-width: 768px) {
+  .contacts {
+    min-height: auto;
+    padding: 50px 50px 100px;
+
+    font-size: 14px;
+  }
+
+  .contacts__header {
+    margin-bottom: 20px;
+
+    font-size: 28px;
+  }
+
+  .contacts__subheader {
+    font-size: 22px;
+  }
+
+  .contacts__text {
+    margin-bottom: 15px;
+  }
+
+  .contacts__form-input,
+  .contacts__form-textarea {
+    margin-bottom: 10px;
+    padding: 15px 10px;
+
+    border: 1px solid white;
+    border-radius: 5px;
+    outline: none;
+    background-color: #ffffff;
+
+    font-family: 'Arsenal', sans-serif;
+    font-size: 14px;
+  }
+
+  .contacts__form-input::placeholder,
+  .contacts__form-textarea::placeholder {
+    color: #cccccc;
+  }
+
+  .contacts__form-textarea {
+    min-height: 120px;
+    margin-bottom: 30px;
+
+    resize: none;
+  }
+
+  .contacts__social-network-button:first-of-type {
+    margin-right: 15px;
+  }
+
+  .contacts__form-submit {
+    padding: 13px 45px;
+
+    font-size: 14px;
+  }
 }
