--- a/common.blocks/common.css
+++ b/common.blocks/common.css
@@ -30,6 +30,10 @@
   font-size: 13px;
 }
 
+.button-link:hover {
+  text-decoration: underline;
+}
+
 .button:hover {
   background-color: #be0039;
 }
@@ -61,4 +65,10 @@
 
 .section-title {
   font-size: 40px;
+}
+
+@media only screen and (max-width: 768px) {
+  .section-title {
+    font-size: 28px;
+  }
 }
