--- a/common.blocks/footer.css
+++ b/common.blocks/footer.css
@@ -3,7 +3,7 @@
   align-items: center;
   flex-flow: row wrap;
 
-  padding: 20px 30px;
+  padding: 20px 75px;
 
   text-align: center;
 
@@ -19,10 +19,14 @@
   background-color: var(--footer-background);
 }
 
+.footer__navigation-item {
+  margin-left: 50px;
+}
+
 .footer__divider {
   width: 100%;
   height: 0;
-  margin-top: 20px;
+  margin-top: 50px;
   margin-bottom: 10px;
 
   border: 0;
@@ -83,6 +87,8 @@
 
 @media only screen and (max-width: 768px) {
   .footer {
+    padding: 20px;
+
     color: white;
   }
 
@@ -133,6 +139,10 @@
     color: #b6b6b6;
 
     font-size: 12px;
+  }
+
+  .footer__divider {
+    margin-top: 40px;
   }
 
   .footer__social-network {
