--- a/common.blocks/assortment.css
+++ b/common.blocks/assortment.css
@@ -2,8 +2,6 @@
   width: 100%;
   padding: 0 30px;
 
-  background-color: var(--primary-background);
-
   font-family: 'Arsenal', sans-serif;
 }
 
@@ -20,77 +18,79 @@
   background-color: var(--primary-background);
 
   grid-gap: 20px;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-flow: row dense;
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .assortment__grid-item {
+  position: relative;
+
   display: flex;
-  align-items: flex-start;
-  flex-direction: column;
+}
 
-  min-height: 250px;
-  padding: 20px;
+.assortment__grid-item {
+  grid-column: span 2;
+}
+.assortment__grid-item:nth-child(1),
+.assortment__grid-item:nth-child(6n + 5),
+.assortment__grid-item:nth-child(6n + 7) {
+  grid-column: span 3;
+  grid-row: span 2;
+}
 
-  background-color: white;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
+.assortment__image-wrapper {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+
+  background-color: #aaa;
 }
 
 .assortment__image {
   width: 100%;
   height: auto;
-}
 
-.assortment__grid-classic {
-  grid-column-end: 3;
-  grid-column-start: 1;
-  grid-row-start: 1;
-  grid-row-end: 3;
-}
-
-.assortment__grid-muss {
-  grid-column-end: 4;
-  grid-column-start: 3;
-  grid-row-start: 1;
-  grid-row-end: 2;
-}
-
-.assortment__grid-wedding {
-  grid-column-end: 4;
-  grid-column-start: 3;
-  grid-row-start: 2;
-  grid-row-end: 3;
-}
-
-.assortment__grid-kids {
-  background-color: #f4f2f3;
-  background-position: right;
-
-  grid-column-end: 4;
-  grid-column-start: 2;
-  grid-row-start: 3;
-  grid-row-end: 5;
+  object-fit: cover;
+  object-position: center;
 }
 
 .assortment__type {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+
   color: #2d2829;
 
+  font-size: 24px;
   font-weight: 500;
 }
 
 .assortment__count-of-type {
+  position: absolute;
+  top: 70px;
+  left: 40px;
+
   color: #666363;
 
+  font-size: 20px;
   font-weight: 300;
 }
 
 .assortment__more-button {
-  align-self: flex-end;
+  position: absolute;
+  right: 65px;
+  bottom: 35px;
 
-  margin-top: auto;
+  display: inline-flex;
+  align-items: center;
+
   padding: 0;
+
+  font-size: 20px;
+}
+
+.assortment__more-button:hover {
+  text-decoration: none;
 }
 
 .assortment__more-button:hover > .assortment__more-icon {
@@ -107,7 +107,7 @@
   .assortment {
     padding: 0 20px;
   }
-  
+
   .assortment__grid-item {
     min-height: 180px;
   }
