--- a/common.blocks/main.css
+++ b/common.blocks/main.css
@@ -1,3 +1,9 @@
 .main {
-    width: 100%;
+  width: 100%;
+
+  background-color: var(--primary-background);
+  background-image: url('../../images/desktop/img2.png');
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: contain;
 }
