--- a/common.blocks/order.css
+++ b/common.blocks/order.css
@@ -10,7 +10,7 @@
   background-image: url('../images/desktop/present.png');
   background-repeat: no-repeat;
   background-position: left;
-  background-size: cover;
+  background-size: contain;
 }
 
 .order__content-wrapper {
