--- a/styles/index.css
+++ b/styles/index.css
@@ -26,7 +26,7 @@
 
 @media only screen and (max-width: 768px) {
   :root {
-    --footer-background:  #898989;
+    --footer-background: #898989;
   }
 }
 
@@ -41,11 +41,14 @@ html {
 }
 
 body {
-  display: flex;
+  /* display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: center; */
+  max-width: 1366px;
+  margin: 0 auto;
 
-  background-color: var(--primary-background);
+  background-color: white;
 }
 
 /* font-family: 'Caveat', cursive;
