--- a/common.blocks/main.css
+++ b/common.blocks/main.css
@@ -7,3 +7,9 @@
   background-position: top;
   background-size: contain;
 }
+
+@media only screen and (min-width: 321px) and (max-width: 480px) {
+  .main {
+    background-image: url('../../images/mobile/img2.png');
+  }
+}
