--- a/common.blocks/contacts.css
+++ b/common.blocks/contacts.css
@@ -17,6 +17,7 @@
   margin-bottom: 40px;
 
   font-size: 40px;
+  font-weight: bold;
 }
 
 .contacts__subheader {
@@ -109,7 +110,8 @@
   display: block;
 }
 
-.contacts__link:hover, .contacts__phone:hover {
+.contacts__link:hover,
+.contacts__phone:hover {
   color: var(--primary-color);
 }
 
@@ -119,6 +121,10 @@
     padding: 50px 50px 100px;
 
     font-size: 14px;
+  }
+
+  .contacts__wrapper {
+    flex-wrap: wrap;
   }
 
   .contacts__header {
@@ -166,8 +172,55 @@
   }
 
   .contacts__form-submit {
+    margin-bottom: 30px;
     padding: 13px 45px;
 
     font-size: 14px;
+  }
+}
+
+@media only screen and (min-width: 321px) and (max-width: 480px) {
+  .contacts {
+    padding: 40px 20px;
+
+    background-image: none;
+  }
+
+  .contacts__form-submit {
+    margin: 0 auto 30px;
+  }
+
+  .contacts__wrapper {
+    display: block;
+  }
+
+  .contacts__header {
+    margin-bottom: 15px;
+
+    text-align: center;
+
+    font-size: 24px;
+  }
+
+  .contacts__subheader {
+    margin-bottom: 10px;
+
+    font-size: 22px;
+  }
+
+  .contacts__text {
+    margin-bottom: 10px;
+  }
+
+  .contacts__feedback {
+    margin-right: 0;
+  }
+
+  .contacts__form-textarea {
+    margin-bottom: 20px;
+  }
+
+  .contacts__network > .contacts__text {
+    margin-bottom: 25px;
   }
 }
