--- a/common.blocks/header.css
+++ b/common.blocks/header.css
@@ -117,6 +117,10 @@
 }
 
 @media only screen and (min-width: 321px) and (max-width: 480px) {
+  header {
+    padding: 20px;
+  }
+
   .header__phone-number {
     display: none;
   }
