--- a/common.blocks/common.css
+++ b/common.blocks/common.css
@@ -53,22 +53,34 @@
 
 .section {
   width: 100%;
+  padding-right: 75px;
+  padding-left: 75px;
 
   scroll-margin-top: 60px;
 }
-
-.section_centered {
-  max-width: 1220px;
-  margin: 0 auto;
-}
-
 
 .section-title {
   font-size: 40px;
 }
 
 @media only screen and (max-width: 768px) {
+  .section {
+    padding-right: 50px;
+    padding-left: 50px;
+  }
+
   .section-title {
     font-size: 28px;
+  }
+}
+
+@media only screen and (min-width: 321px) and (max-width: 480px) {
+  .section {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  .section-title {
+    font-size: 24px;
   }
 }
