--- a/common.blocks/contacts.css
+++ b/common.blocks/contacts.css
@@ -1,6 +1,7 @@
 .contacts {
   min-height: 100vh;
-  padding: 70px 50px;
+  padding-top: 70px;
+  padding-bottom: 70px;
 
   background-color: var(--primary-background);
   background-image: url('../images/desktop/strawberries.png');
@@ -16,7 +17,6 @@
 .contacts__header {
   margin-bottom: 40px;
 
-  font-size: 40px;
   font-weight: bold;
 }
 
@@ -118,7 +118,8 @@
 @media only screen and (max-width: 768px) {
   .contacts {
     min-height: auto;
-    padding: 50px 50px 100px;
+    padding-top: 50px;
+    padding-bottom: 100px;
 
     font-size: 14px;
   }
@@ -129,8 +130,6 @@
 
   .contacts__header {
     margin-bottom: 20px;
-
-    font-size: 28px;
   }
 
   .contacts__subheader {
@@ -198,8 +197,6 @@
     margin-bottom: 15px;
 
     text-align: center;
-
-    font-size: 24px;
   }
 
   .contacts__subheader {
