--- a/common.blocks/common.css
+++ b/common.blocks/common.css
@@ -51,6 +51,16 @@
   font-family: 'Playfair Display', serif;
 }
 
+.container {
+  width: 100%;
+}
+
+.content {
+  width: 100%;
+  max-width: 1220px;
+  margin: 0 auto;
+}
+
 .section {
   width: 100%;
   padding-right: 75px;
@@ -74,7 +84,7 @@
   }
 }
 
-@media only screen and (min-width: 321px) and (max-width: 480px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   .section {
     padding-right: 20px;
     padding-left: 20px;
