--- a/common.blocks/header.css
+++ b/common.blocks/header.css
@@ -3,16 +3,19 @@
   z-index: 2;
   top: 0;
 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
   width: 100%;
   padding: 20px 75px;
 
   text-align: center;
 
   background-color: var(--primary-background);
+}
+
+.header__content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
 }
 
 .header__navigation-toggle-label {
@@ -116,7 +119,7 @@
   }
 }
 
-@media only screen and (min-width: 321px) and (max-width: 480px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   .header {
     padding: 20px;
   }
@@ -126,6 +129,6 @@
   }
 
   .header__navigation-item {
-    margin: 0 50px 15px;
+    margin: 0 20px 15px;
   }
 }
