--- a/styles/index.css
+++ b/styles/index.css
@@ -40,10 +40,11 @@ html {
 }
 
 body {
+  min-width: 320px;
   /* max-width: 1366px; */
   margin: 0 auto;
 
-  background-color: white;
+  background-color: var(--primary-background);
 }
 
 /* font-family: 'Caveat', cursive;
