--- a/common.blocks/choose-cake.css
+++ b/common.blocks/choose-cake.css
@@ -1,6 +1,6 @@
 .choose-cake {
   width: 100%;
-  min-height: calc(100vh - 61px);
+  min-height: calc(100vh - 51px - 52px);
 
   color: #2e2829;
 
@@ -17,7 +17,7 @@
 
 .choose-cake__header {
   width: 377px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 
   letter-spacing: 6px;
 
@@ -27,17 +27,13 @@
 }
 
 .choose-cake__subheader {
-  margin-bottom: 70px;
+  margin-bottom: 60px;
 
-  font-size: 40px;
+  font-size: 48px;
 }
 
 .choose-cake__benefits {
   display: flex;
-}
-
-.choose-cake__benefits-item {
-  max-width: 44%;
 }
 
 .choose-cake__benefits-item:first-child {
@@ -45,9 +41,14 @@
 }
 
 .choose-cake__button {
-  margin-bottom: 100px;
+  margin-bottom: 140px;
+  padding: 1.2em 4.45em;
 
   text-decoration: none;
+
+  border-radius: 25px;
+
+  font-size: 15px;
 }
 
 @media only screen and (max-width: 768px) {
