--- a/common.blocks/benefit.css
+++ b/common.blocks/benefit.css
@@ -5,10 +5,11 @@
 
 .benefit__icon {
   margin-right: 10px;
+  margin-bottom: 10px;
 
   color: var(--primary-color);
 
-  font-size: 40px;
+  font-size: 58px;
 }
 
 .benefit__text {
