--- a/common.blocks/navigation.css
+++ b/common.blocks/navigation.css
@@ -17,7 +17,14 @@
   color: #f50049;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1365px) {
+  .navigation {
+    background-color: white;
+  }
+}
+
+
+@media only screen and (min-width: 320px) and (max-width: 767px) {
   .navigation {
     background-color: white;
   }
