--- a/common.blocks/order.css
+++ b/common.blocks/order.css
@@ -63,7 +63,7 @@
   font-size: 20px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1365px) {
   .order {
     min-height: auto;
     padding-top: 50px;
